tests/ui/project/invalid.stderr
error: unexpected token
  --> $DIR/invalid.rs:16:14
   |
16 |     #[project(foo)] //~ ERROR unexpected token
   |              ^^^^^

error: aborting due to previous error

